--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,12 @@
 const today = new Date();
 ---
 
-<footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+<footer class="border font-400">
+  &copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
 </footer>
 <style>
-	footer {
-		padding: 25px;
-		text-align: center;
-	}
+  footer {
+    padding: 25px;
+    text-align: center;
+  }
 </style>
