feat: 暫定カテゴリーページ作成(#5)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,6 +43,7 @@ const posts = (await getCollection("blog")).sort(
               <li>
                 <FormattedDate date={post.data.pubDate} />
                 <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
+                <span>{post.data.category}</span>
               </li>
             ))
           }
