feat: 記事URLのblog部分をpostsにリネーム(#5)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from "@/consts";
   </h2>
   <nav>
     <HeaderLink href="/">Home</HeaderLink>
-    <HeaderLink href="/blog">Blog</HeaderLink>
+    <HeaderLink href="/posts">Posts</HeaderLink>
     <HeaderLink href="/about">About</HeaderLink>
     <HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">
       Twitter
