--- a/src/pages/[category]/[page].astro
+++ b/src/pages/[category]/[page].astro
@@ -12,11 +12,11 @@ type Params = {
   category: string;
 };
 type Props = {
-  page: Page<CollectionEntry<"blog">>;
+  page: Page<CollectionEntry<"posts">>;
 };
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
-  const allPosts = (await getCollection("blog")).sort(
+  const allPosts = (await getCollection("posts")).sort(
     (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
   );
 
@@ -68,7 +68,7 @@ const { category } = Astro.params as Params;
             page.data.map(({ data, slug }) => (
               <li>
                 <FormattedDate date={data.pubDate} />
-                <a href={`/blog/${slug}/`}>{data.title}</a>
+                <a href={`/posts/${slug}/`}>{data.title}</a>
                 <span>{data.category}</span>
               </li>
             ))
