--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -6,7 +6,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "@/components/FormattedDate.astro";
 
-const posts = (await getCollection("blog")).sort(
+const posts = (await getCollection("posts")).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 ---
@@ -42,7 +42,7 @@ const posts = (await getCollection("blog")).sort(
             posts.map((post) => (
               <li>
                 <FormattedDate date={post.data.pubDate} />
-                <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
+                <a href={`/posts/${post.slug}/`}>{post.data.title}</a>
               </li>
             ))
           }
