--- a/src/pages/[category]/[page].astro
+++ b/src/pages/[category]/[page].astro
@@ -7,6 +7,7 @@ import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import FormattedDate from "@/components/FormattedDate.astro";
 import { SITE_TITLE, SITE_DESCRIPTION, CATEGORY_LIST } from "@/consts";
+import { extractPostSlug } from "@/utils/extractPostSlug";
 
 type Params = {
   category: string;
@@ -16,9 +17,11 @@ type Props = {
 };
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
-  const allPosts = (await getCollection("posts")).sort(
-    (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-  );
+  const allPosts = (await getCollection("posts"))
+    .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+    .map((post) => {
+      return { ...post, slug: extractPostSlug(post.slug) };
+    });
 
   return CATEGORY_LIST.map((category) => {
     const filteredPosts = allPosts.filter(
