--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,13 @@ import Footer from "@/components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "@/components/FormattedDate.astro";
+import { extractPostSlug } from "@/utils/extractPostSlug";
 
-const posts = (await getCollection("posts")).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-);
+const posts = (await getCollection("posts"))
+  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+  .map((post) => {
+    return { ...post, slug: extractPostSlug(post.slug) };
+  });
 ---
 
 <!DOCTYPE html>
