settings: サイトマップ設定（URL正規化のために、ビルド設定をfileにした）(#5)
ref: https://docs.astro.build/ja/reference/configuration-reference/#buildformat

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -12,6 +12,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 <html lang="en">
   <head>
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <BaseHead title={title} description={description} />
     <style>
       .title {
