--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -42,7 +42,7 @@ const posts = (await getCollection("posts")).sort(
             posts.map((post) => (
               <li>
                 <FormattedDate date={post.data.pubDate} />
-                <a href={`/posts/${post.slug}/`}>{post.data.title}</a>
+                <a href={`/posts/${post.slug}`}>{post.data.title}</a>
               </li>
             ))
           }
