--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,9 +5,10 @@ import Layout from "@/layouts/BlogPost.astro";
 <Layout
   title="About Me"
   description="Lorem ipsum dolor sit amet"
-  category="develop"
   pubDate={new Date("August 08 2021")}
   updatedDate={new Date("August 08 2022")}
+  category="develop"
+  tags={["about"]}
   heroImage="/placeholder-about.jpg"
 >
   <p>
