--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
-import BaseHead from "@/components/BaseHead.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
 import FormattedDate from "@/components/FormattedDate.astro";
 import { extractPostSlug } from "@/utils/extractPostSlug";
@@ -14,47 +11,37 @@ const posts = (await getCollection("posts"))
   });
 ---
 
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <link rel="sitemap" href="/sitemap-index.xml" />
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <style>
-      ul {
-        list-style-type: none;
-        padding: unset;
+<BaseLayout>
+  <section>
+    <ul>
+      {
+        posts.map((post) => (
+          <li>
+            <FormattedDate date={post.data.pubDate} />
+            <a href={`/posts/${post.slug}`}>{post.data.title}</a>
+            <span>{post.data.category}</span>
+            <span>{post.data.tags.join(", ")}</span>
+          </li>
+        ))
       }
-      ul li {
-        display: flex;
-      }
-      ul li :global(time) {
-        flex: 0 0 130px;
-        font-style: italic;
-        color: #595959;
-      }
-      ul li a:visited {
-        color: #8e32dc;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section>
-        <ul>
-          {
-            posts.map((post) => (
-              <li>
-                <FormattedDate date={post.data.pubDate} />
-                <a href={`/posts/${post.slug}`}>{post.data.title}</a>
-                <span>{post.data.category}</span>
-                <span>{post.data.tags.join(", ")}</span>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-    </main>
-    <Footer />
-  </body>
-</html>
+    </ul>
+    <h2>tet</h2>
+  </section>
+  <style>
+    ul {
+      list-style-type: none;
+      padding: unset;
+    }
+    ul li {
+      display: flex;
+    }
+    ul li :global(time) {
+      flex: 0 0 130px;
+      font-style: italic;
+      color: #595959;
+    }
+    ul li a:visited {
+      color: #8e32dc;
+    }
+  </style>
+</BaseLayout>
