settings: さわらび明朝の適用(#7)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 body {
-	font-family: Verdana, sans-serif;
+	font-family: Sawarabi Mincho, Verdana, sans-serif;
 	margin: auto;
 	padding: 20px;
 	max-width: 65ch;
