--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,9 +5,6 @@
  */
 body {
 	font-family: Sawarabi Mincho, Verdana, sans-serif;
-	margin: auto;
-	padding: 20px;
-	max-width: 65ch;
 	text-align: left;
 	background-color: #fff;
 	word-wrap: break-word;
@@ -15,16 +12,12 @@ body {
 	line-height: 1.5;
 	color: #444;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong,
-b {
-	color: #222;
+
+h1 {
+  font-family: Abril Fatface, sans-serif;
 }
+
+
 a {
 	color: #3273dc;
 }
