feat: 暫定Footerを作った(#7)

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,8 @@
 const today = new Date();
 ---
 
-<footer class="border font-400">
-  &copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+<footer
+  class="from-brand-start to-brand-end bg-gradient-to-b py-3 text-center color-white"
+>
+  &copy; 2018-{today.getFullYear()} h-yoshikawa44 Built with Astro.
 </footer>
-<style>
-  footer {
-    padding: 25px;
-    text-align: center;
-  }
-</style>
