--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,11 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+html {
+  height: 100%
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 	font-family: Sawarabi Mincho, Verdana, sans-serif;
 	text-align: left;
 	background-color: #fff;
@@ -13,10 +15,13 @@ body {
 	color: #444;
 }
 
+main {
+  flex: 1 0 auto;
+}
+
 h1 {
   font-family: Abril Fatface, sans-serif;
 }
-
 
 a {
 	color: #3273dc;
