--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import "@unocss/reset/tailwind.css";
 import "@/styles/global.css";
 import BaseHead from "@/components/BaseHead.astro";
 import Header from "@/components/Header.astro";
+import SideBar from "@/components/SideBar.astro";
 import Footer from "@/components/Footer.astro";
 
 type Props = {
@@ -22,7 +23,14 @@ const { title, description } = Astro.props;
   <body>
     <Header />
     <main>
-      <slot />
+      <div class="my-8">
+        <div class="mx-auto flex px-2 container sm:px-4">
+          <SideBar />
+          <div class="ml-6">
+            <slot />
+          </div>
+        </div>
+      </div>
     </main>
     <Footer />
   </body>
