feat: グローバルスタイルのうち、移植できるものは移植させた(#7)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 ---
 
 <header class="from-brand-start to-brand-end bg-gradient-to-b py-3">
-  <div class="mx-auto color-white container">
+  <div class="mx-auto px-2 color-white container sm:px-4">
     <div class="flex items-baseline">
-      <h1 class="text-2xl">
+      <h1 class="font-fatface text-2xl">
         {SITE_TITLE}
       </h1>
       <p class="ml-4 color-white/75">{SITE_DESCRIPTION}</p>
