--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,14 +15,16 @@ const { title, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" class="h-full">
   <head>
     <BaseHead title={title} description={description} />
   </head>
 
-  <body>
+  <body
+    class="font-sawarabi min-h-full flex flex-col break-words bg-slate-100 text-left leading-6 text-slate-800"
+  >
     <Header />
-    <main>
+    <main class="flex-shrink-0 flex-grow-1 flex-basis-auto">
       <div class="my-8">
         <div class="mx-auto flex px-2 container sm:px-4">
           <SideBar />
