feat: サイトタイトルをトップページへのリンクにした(#7)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
   <div class="mx-auto px-2 color-white container sm:px-4">
     <div class="flex items-baseline">
       <h1 class="font-fatface text-2xl">
-        {SITE_TITLE}
+        <a href="/">{SITE_TITLE}</a>
       </h1>
       <p class="ml-4 color-white/75">{SITE_DESCRIPTION}</p>
     </div>
