feat: コンテンツ部分に最低限のスタイル適用(#7)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -28,7 +28,7 @@ const { title, description } = Astro.props;
       <div class="my-8">
         <div class="mx-auto flex px-2 container sm:px-4">
           <SideBar />
-          <div class="ml-6">
+          <div class="ml-6 flex-grow-1 rounded-2 bg-white p-4">
             <slot />
           </div>
         </div>
