--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -3,7 +3,11 @@ import NavLink from "@/components/NavLink.astro";
 import { CATEGORY_LIST, CATEGORY_MAP } from "@/consts";
 ---
 
-<aside class="hidden rounded-2 bg-white py-4 lg:block md:w-52">
+<div
+  id="menu"
+  class="fixed right-4 top-4 z-1200 hidden max-w-xs w-full rounded-2 bg-white py-4 text-slate-800 shadow-md"
+>
+  <button id="close-menu-button" class="ml-auto block px4">×</button>
   <nav class="grid gap-y-4">
     <ul>
       <NavLink href="/">Home</NavLink>
@@ -24,4 +28,4 @@ import { CATEGORY_LIST, CATEGORY_MAP } from "@/consts";
       <NavLink href="/policy">プライバシーポリシー</NavLink>
     </ul>
   </nav>
-</aside>
+</div>
