--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,10 +1,12 @@
 ---
 import "@unocss/reset/tailwind.css";
+import "wicg-inert";
 import "@/styles/global.css";
 import BaseHead from "@/components/BaseHead.astro";
 import Header from "@/components/Header.astro";
 import SideBar from "@/components/SideBar.astro";
 import Footer from "@/components/Footer.astro";
+import Menu from "@/components/Menu.astro";
 
 type Props = {
   title?: string;
@@ -21,19 +23,25 @@ const { title, description } = Astro.props;
   </head>
 
   <body
-    class="font-sawarabi min-h-full flex flex-col break-words bg-slate-100 text-left leading-6 text-slate-800"
+    class="h-full flex flex-col break-words bg-slate-100 text-left font-sawarabi leading-6 text-slate-800"
   >
-    <Header />
-    <main class="flex-shrink-0 flex-grow-1 flex-basis-auto">
-      <div class="my-8">
-        <div class="mx-auto flex px-2 container sm:px-4">
-          <SideBar />
-          <div class="ml-6 flex-grow-1 rounded-2 bg-white p-4">
-            <slot />
+    <div id="base-contents" class="min-h-full flex flex-col">
+      <Header />
+      <main class="flex-shrink-0 flex-grow-1 flex-basis-auto">
+        <div class="my-8">
+          <div class="mx-auto flex px-2 container sm:px-4">
+            <SideBar />
+            <div class="ml-6 flex-grow-1 rounded-2 bg-white p-4">
+              <slot />
+            </div>
           </div>
         </div>
-      </div>
-    </main>
-    <Footer />
+      </main>
+      <Footer />
+    </div>
+    <Menu />
+    <script>
+      import "@/scripts/menu";
+    </script>
   </body>
 </html>
