feat: アイコンの適用(#7)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
         <a href="/">{SITE_TITLE}</a>
       </h1>
       <p class="ml-4 color-white/75">{SITE_DESCRIPTION}</p>
-      <button id="open-menu-button" class="ml-auto block lg:hidden">test</button
+      <button id="open-menu-button" class="ml-auto lg:hidden"
+        ><span class="i-system-uicons:menu-vertical text-base">menu</span
+        ></button
       >
     </div>
   </div>
