--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -7,7 +7,9 @@ import { CATEGORY_LIST, CATEGORY_MAP } from "@/consts";
   id="menu"
   class="fixed right-4 top-4 z-1200 hidden max-w-xs w-full rounded-2 bg-white py-4 text-slate-800 shadow-md"
 >
-  <button id="close-menu-button" class="ml-auto block px4">×</button>
+  <button id="close-menu-button" class="ml-auto block px4"
+    ><span class="i-system-uicons:cross text-base">閉じる</span></button
+  >
   <nav class="grid gap-y-4">
     <ul>
       <NavLink href="/">Home</NavLink>
