fix: Prettier シングルクォート反映(#9)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
+import { SITE_TITLE, SITE_DESCRIPTION } from '@/consts';
 ---
 
 <header class="from-brand-start to-brand-end bg-gradient-to-b py-3">
