--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,6 +1,6 @@
 ---
-import NavLink from "@/components/NavLink.astro";
-import { CATEGORY_LIST, CATEGORY_MAP } from "@/consts";
+import NavLink from '@/components/NavLink.astro';
+import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
 ---
 
 <div
