--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -1,6 +1,6 @@
 ---
-import NavLink from "@/components/NavLink.astro";
-import { CATEGORY_LIST, CATEGORY_MAP } from "@/consts";
+import NavLink from '@/components/NavLink.astro';
+import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
 ---
 
 <aside class="hidden rounded-2 bg-white py-4 lg:block md:w-52">
