--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
+import { SITE_TITLE, SITE_DESCRIPTION } from '@/consts';
 
 export interface Props {
   title?: string;
@@ -8,14 +8,14 @@ export interface Props {
 }
 
 const canonicalURL =
-  Astro.url.pathname === "/"
+  Astro.url.pathname === '/'
     ? Astro.site?.origin
     : new URL(Astro.url.pathname, Astro.site);
 
 const {
   title = SITE_TITLE,
   description = SITE_DESCRIPTION,
-  image = "/placeholder-social.jpg",
+  image = '/placeholder-social.jpg',
 } = Astro.props;
 ---
 
