--- a/src/pages/[category]/[page].astro
+++ b/src/pages/[category]/[page].astro
@@ -1,23 +1,23 @@
 ---
-import { getCollection } from "astro:content";
-import type { GetStaticPathsOptions, Page } from "astro";
-import type { CollectionEntry } from "astro:content";
-import BaseHead from "@/components/BaseHead.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
-import FormattedDate from "@/components/FormattedDate.astro";
-import { SITE_TITLE, SITE_DESCRIPTION, CATEGORY_LIST } from "@/consts";
-import { extractPostSlug } from "@/utils/extractPostSlug";
+import { getCollection } from 'astro:content';
+import type { GetStaticPathsOptions, Page } from 'astro';
+import type { CollectionEntry } from 'astro:content';
+import BaseHead from '@/components/BaseHead.astro';
+import Header from '@/components/Header.astro';
+import Footer from '@/components/Footer.astro';
+import FormattedDate from '@/components/FormattedDate.astro';
+import { SITE_TITLE, SITE_DESCRIPTION, CATEGORY_LIST } from '@/consts';
+import { extractPostSlug } from '@/utils/extractPostSlug';
 
 type Params = {
   category: string;
 };
 type Props = {
-  page: Page<CollectionEntry<"posts">>;
+  page: Page<CollectionEntry<'posts'>>;
 };
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
-  const allPosts = (await getCollection("posts"))
+  const allPosts = (await getCollection('posts'))
     .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
     .map((post) => {
       return { ...post, slug: extractPostSlug(post.slug) };
