--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,14 @@
 ---
-import Layout from "@/layouts/BlogPost.astro";
+import Layout from '@/layouts/BlogPost.astro';
 ---
 
 <Layout
   title="About Me"
   description="Lorem ipsum dolor sit amet"
-  pubDate={new Date("August 08 2021")}
-  updatedDate={new Date("August 08 2022")}
+  pubDate={new Date('August 08 2021')}
+  updatedDate={new Date('August 08 2022')}
   category="develop"
-  tags={["about"]}
+  tags={['about']}
   heroImage="/placeholder-about.jpg"
 >
   <p>
