--- a/src/pages/form.astro
+++ b/src/pages/form.astro
@@ -1,6 +1,6 @@
 ---
-import BaseHead from "@/components/BaseHead.astro";
-import { SITE_DESCRIPTION, SITE_TITLE } from "@/consts";
+import BaseHead from '@/components/BaseHead.astro';
+import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 ---
 
 <!DOCTYPE html>
