--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,12 +1,12 @@
 ---
-import BaseHead from "@/components/BaseHead.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
-import { getCollection } from "astro:content";
-import FormattedDate from "@/components/FormattedDate.astro";
+import BaseHead from '@/components/BaseHead.astro';
+import Header from '@/components/Header.astro';
+import Footer from '@/components/Footer.astro';
+import { SITE_TITLE, SITE_DESCRIPTION } from '@/consts';
+import { getCollection } from 'astro:content';
+import FormattedDate from '@/components/FormattedDate.astro';
 
-const posts = (await getCollection("posts")).sort(
+const posts = (await getCollection('posts')).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 ---
