--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,11 +1,11 @@
 ---
-import BaseHead from "@/components/BaseHead.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
-import { getCollection } from "astro:content";
+import BaseHead from '@/components/BaseHead.astro';
+import Header from '@/components/Header.astro';
+import Footer from '@/components/Footer.astro';
+import { SITE_TITLE, SITE_DESCRIPTION } from '@/consts';
+import { getCollection } from 'astro:content';
 
-const allTags = (await getCollection("posts"))
+const allTags = (await getCollection('posts'))
   .map((post) => post.data.tags)
   .flat();
 
