fix: サイドバーの表示制御は呼出し側で定義するようにした(#11)

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -3,7 +3,7 @@ import NavLink from '@/components/NavLink.astro';
 import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
 ---
 
-<aside class="hidden rounded-2 bg-white py-4 lg:block md:w-52">
+<aside class="rounded-2 bg-white py-4 md:min-w-52">
   <nav class="grid gap-y-4">
     <ul>
       <NavLink href="/">Home</NavLink>
