--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -30,8 +30,10 @@ const { title, description } = Astro.props;
       <main class="flex-shrink-0 flex-grow-1 flex-basis-auto">
         <div class="my-8">
           <div class="mx-auto flex px-2 container sm:px-4">
-            <SideBar />
-            <div class="ml-6 flex-grow-1 rounded-2 bg-white p-4">
+            <div class="hidden place-self-start lg:block">
+              <SideBar />
+            </div>
+            <div class="flex-grow-1 rounded-2 bg-white p-4 lg:ml-6">
               <slot />
             </div>
           </div>
