--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -13,10 +13,13 @@ const canonicalURL =
     : new URL(Astro.url.pathname, Astro.site);
 
 const {
-  title = SITE_TITLE,
+  title,
   description = SITE_DESCRIPTION,
   image = '/placeholder-social.jpg',
 } = Astro.props;
+
+const titleWithSiteTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
+const simpleTitle = title ? title : SITE_TITLE;
 ---
 
 <!-- Global Metadata -->
@@ -29,21 +32,21 @@ const {
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{title}</title>
-<meta name="title" content={title} />
+<title>{titleWithSiteTitle}</title>
+<meta name="title" content={titleWithSiteTitle} />
 <meta name="description" content={description} />
 <link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
-<meta property="og:title" content={title} />
+<meta property="og:title" content={simpleTitle} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
-<meta property="twitter:title" content={title} />
+<meta property="twitter:title" content={simpleTitle} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
