feat: 記事 - Heading要素のスタイル作成(#15)

--- a/src/pageComponents/posts/[...slug].astro
+++ b/src/pageComponents/posts/[...slug].astro
@@ -2,7 +2,7 @@
 import { CollectionEntry } from 'astro:content';
 import BaseLayout from '@/layouts/BaseLayout.astro';
 import FormattedDate from '@/components/FormattedDate.astro';
-import '@/styles/post.css';
+import '@/styles/post.scss';
 import { CATEGORY_MAP } from '@/consts';
 
 type Props = CollectionEntry<'posts'>;
