--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -28,4 +28,26 @@
   p + p {
     @apply mt-4;
   }
+
+  ul,
+  ol {
+    @apply my-4 pl-8;
+  }
+
+  ul {
+    @apply list-disc;
+  }
+
+  ol {
+    @apply list-decimal;
+  }
+
+  li {
+    @apply my-1;
+  }
+
+  li > ul,
+  li > ol {
+    @apply my-0;
+  }
 }
