--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -80,4 +80,16 @@
   tbody tr:nth-child(odd) th {
     @apply bg-slate-50;
   }
+
+  pre {
+    @apply p-4;
+  }
+
+  :not(pre) > code {
+    @apply px-1 py-0.5 text-red-700 text-sm rounded bg-stone-100;
+  }
+
+  pre > code {
+    @apply bg-transparent text-inherit;
+  }
 }
