--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'HackGen';
+  src: url('/fonts/HackGen-Regular-2.8.0.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 a:focus:not(:focus-visible) {
   @apply outline-transparent;
 }
