fix: グローバルスタイルファイルをSCSSファイルにした、不要なスタイル削除(#15)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import '@unocss/reset/tailwind.css';
 import 'wicg-inert';
-import '@/styles/global.css';
+import '@/styles/global.scss';
 import BaseHead from '@/components/BaseHead.astro';
 import Header from '@/components/Header.astro';
 import SideBar from '@/components/SideBar.astro';
