feat: 記事ヘッダーの区切り線をグラデーションにした(#15)

--- a/src/pageComponents/posts/[...slug].astro
+++ b/src/pageComponents/posts/[...slug].astro
@@ -36,7 +36,9 @@ const { Content } = await post.render();
         {tags.join(', ')}
       </p>
     </header>
-    <hr class="my-4 border-gray" />
+    <hr
+      class="my-4 h-[2px] border-none from-transparent via-gray-500 bg-gradient-to-r"
+    />
     <div class="post-content">
       <Content />
     </div>
