--- a/src/pageComponents/posts/[...slug].astro
+++ b/src/pageComponents/posts/[...slug].astro
@@ -26,7 +26,7 @@ const { Content } = await post.render();
           )
         }
       </p>
-      <h1 class="text-4xl">{title}</h1>
+      <h1 class="text-4xl font-600">{title}</h1>
       <p class="mt-4 flex items-center">
         <span class="i-system-uicons:document mr-0.5 text-lg">カテゴリー</span>
         {`${CATEGORY_MAP[category]}`}
