feat: トップページ（一覧1ページ目）を暫定で作った(#17)

--- a/src/pageComponents/index.astro
+++ b/src/pageComponents/index.astro
@@ -1,8 +1,9 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout.astro';
 import { getCollection } from 'astro:content';
+import BaseLayout from '@/layouts/BaseLayout.astro';
 import FormattedDate from '@/components/FormattedDate.astro';
 import { extractPostSlug } from '@/utils/extractPostSlug';
+import { CATEGORY_MAP } from '@/consts';
 
 const posts = (await getCollection('posts'))
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
@@ -12,36 +13,39 @@ const posts = (await getCollection('posts'))
 ---
 
 <BaseLayout>
-  <section>
-    <ul>
-      {
-        posts.map((post) => (
-          <li>
+  <div>
+    {
+      posts.map((post) => (
+        <article class="border-b py-4 last:border-none">
+          <p class="text-sm">
             <FormattedDate date={post.data.pubDate} />
-            <a href={`/posts/${post.slug}`}>{post.data.title}</a>
-            <span>{post.data.category}</span>
-            <span>{post.data.tags.join(', ')}</span>
-          </li>
-        ))
-      }
-    </ul>
-    <h2>tet</h2>
-  </section>
-  <style>
-    ul {
-      list-style-type: none;
-      padding: unset;
+            {post.data.updatedDate && (
+              <span class="inline-flex items-center">
+                (<span class="i-system-uicons:refresh mr-1">更新日</span>
+                <FormattedDate date={post.data.updatedDate} />)
+              </span>
+            )}
+          </p>
+          <h2 class="text-2xl font-600">
+            <a
+              href={`/posts/${post.slug}`}
+              class="block underline-offset-2 decoration-solid hover:underline"
+            >
+              {post.data.title}
+            </a>
+          </h2>
+          <p class="mt-2 flex items-center">
+            <span class="i-system-uicons:document mr-0.5 text-lg">
+              カテゴリー
+            </span>
+            {`${CATEGORY_MAP[post.data.category]}`}
+          </p>
+          <p class="flex items-center">
+            <span class="i-system-uicons:tag mr-0.5 text-lg">タグ一覧</span>
+            {post.data.tags.join(', ')}
+          </p>
+        </article>
+      ))
     }
-    ul li {
-      display: flex;
-    }
-    ul li :global(time) {
-      flex: 0 0 130px;
-      font-style: italic;
-      color: #595959;
-    }
-    ul li a:visited {
-      color: #8e32dc;
-    }
-  </style>
+  </div>
 </BaseLayout>
