feat: 次ページリンクを作った(#17)

--- a/src/pageComponents/index.astro
+++ b/src/pageComponents/index.astro
@@ -48,5 +48,11 @@ const posts = (await getCollection('posts'))
         </article>
       ))
     }
+    <div class="mt-4 text-right">
+      <a href="/posts/2" class="inline-flex items-center px-2 py-1"
+        >次ページへ<span class="i-system-uicons:arrow-right-circle ml-0.5"
+        ></span></a
+      >
+    </div>
   </div>
 </BaseLayout>
