--- a/src/pageComponents/index.astro
+++ b/src/pageComponents/index.astro
@@ -1,9 +1,10 @@
 ---
 import { getCollection } from 'astro:content';
 import BaseLayout from '@/layouts/BaseLayout.astro';
+import PostCard from '@/features/post/PostCard.astro';
+import Paging from '@/components/Paging.astro';
 import { extractPostSlug } from '@/utils/extractPostSlug';
 import { PAGE_SIZE } from '@/consts';
-import PostCard from '@/features/post/PostCard.astro';
 
 const posts = (await getCollection('posts'))
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
@@ -27,11 +28,6 @@ const posts = (await getCollection('posts'))
         />
       ))
     }
-    <div class="mt-4 text-right">
-      <a href="/posts/2" class="inline-flex items-center px-2 py-1"
-        >次ページへ<span class="i-system-uicons:arrow-right-circle ml-0.5"
-        ></span></a
-      >
-    </div>
+    <Paging nextUrl="/posts/2" />
   </div>
 </BaseLayout>
