--- a/src/pages/[category]/[page].astro
+++ b/src/pages/[category]/[page].astro
@@ -2,15 +2,12 @@
 import { getCollection } from 'astro:content';
 import type { GetStaticPathsOptions, Page } from 'astro';
 import type { CollectionEntry } from 'astro:content';
-import BaseHead from '@/components/BaseHead.astro';
-import Header from '@/components/Header.astro';
-import Footer from '@/components/Footer.astro';
-import FormattedDate from '@/components/FormattedDate.astro';
-import { SITE_TITLE, SITE_DESCRIPTION, CATEGORY_LIST } from '@/consts';
+import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
 import { extractPostSlug } from '@/utils/extractPostSlug';
+import CategoryPage from '@/pageComponents/[category]/[page].astro';
 
 type Params = {
-  category: string;
+  category: keyof typeof CATEGORY_MAP;
 };
 type Props = {
   page: Page<CollectionEntry<'posts'>>;
@@ -38,51 +35,4 @@ const { page } = Astro.props;
 const { category } = Astro.params as Params;
 ---
 
-<html lang="ja">
-  <head>
-    <BaseHead
-      title={`${category} | ${SITE_TITLE}`}
-      description={SITE_DESCRIPTION}
-    />
-    <style>
-      ul {
-        list-style-type: none;
-        padding: unset;
-      }
-      ul li {
-        display: flex;
-      }
-      ul li :global(time) {
-        flex: 0 0 130px;
-        font-style: italic;
-        color: #595959;
-      }
-      ul li a:visited {
-        color: #8e32dc;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section>
-        <ul>
-          {
-            page.data.map(({ data, slug }) => (
-              <li>
-                <FormattedDate date={data.pubDate} />
-                <a href={`/posts/${slug}`}>{data.title}</a>
-                <span>{data.category}</span>
-              </li>
-            ))
-          }
-        </ul>
-        <div>
-          {page.url.prev && <button>前ページに戻る</button>}
-          {page.url.next && <button>次ページに進む</button>}
-        </div>
-      </section>
-    </main>
-    <Footer />
-  </body>
-</html>
+<CategoryPage category={category} page={page} />
