feat: カテゴリ記事一覧ページの作成(#19)

--- a/src/pageComponents/[category]/[page].astro
+++ b/src/pageComponents/[category]/[page].astro
@@ -1,9 +1,7 @@
 ---
 import type { Page } from 'astro';
 import type { CollectionEntry } from 'astro:content';
-import BaseLayout from '@/layouts/BaseLayout.astro';
-import PostCard from '@/features/post/PostCard.astro';
-import Paging from '@/components/Paging.astro';
+import PostPagingList from '@/features/post/PostPagingList.astro';
 import { SITE_TITLE, CATEGORY_MAP } from '@/consts';
 
 type Props = {
@@ -14,23 +12,10 @@ type Props = {
 const { category, page } = Astro.props;
 ---
 
-<BaseLayout
-  title={`${CATEGORY_MAP[category]} 記事一覧 - ${page.currentPage} | ${SITE_TITLE}`}
->
-  <p class="mb-4 text-xl font-600">
-    {`${CATEGORY_MAP[category]} 記事一覧 - ${page.currentPage}`}
-  </p>
-  {
-    page.data.map((post) => (
-      <PostCard
-        pubDate={post.data.pubDate}
-        updatedDate={post.data.updatedDate}
-        slug={post.slug}
-        title={post.data.title}
-        category={post.data.category}
-        tags={post.data.tags}
-      />
-    ))
-  }
-  <Paging previousUrl={page.url.prev} nextUrl={page.url.next} />
-</BaseLayout>
+<PostPagingList
+  headTitle={`${CATEGORY_MAP[category]} 記事一覧 - ${page.currentPage} | ${SITE_TITLE}`}
+  pageTitle={`${CATEGORY_MAP[category]} 記事一覧 - ${page.currentPage}`}
+  postList={page.data}
+  previousUrl={page.url.prev}
+  nextUrl={page.url.next}
+/>
