--- a/src/pageComponents/index.astro
+++ b/src/pageComponents/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from 'astro:content';
 import PostPagingList from '@/features/post/PostPagingList.astro';
 import { extractPostSlug } from '@/utils/extractPostSlug';
-import { PAGE_SIZE } from '@/consts';
+import { PAGE_SIZE, RSS_LINKS } from '@/consts';
 
 const posts = (await getCollection('posts'))
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
@@ -12,4 +12,9 @@ const posts = (await getCollection('posts'))
   });
 ---
 
-<PostPagingList pageTitle="最新の記事" postList={posts} nextUrl="/posts/2" />
+<PostPagingList
+  pageTitle="最新の記事"
+  rss={RSS_LINKS.all}
+  postList={posts}
+  nextUrl="/posts/2"
+/>
